NEWS -- an overview of user-visible changes with each release

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.32                        (2021-04-26)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.31                        (2021-04-21)
----------------------------------------------------------------------
 * Supported new model
 * Fixed the problem that epson-escpr-wrapper would crash 
   when cupsRasterReadHeader failed.

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.30.1                      (2021-04-16)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.30                        (2021-03-31)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.29                        (2021-03-11)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.28                        (2021-02-25)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.27                        (2021-02-15)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.1.26                        (2021-02-09)