@@ -1,7 +1,7 @@
-DIST epson-inkjet-printer-escpr2-1.1.31-1lsb3.2.i486.rpm 2768389 BLAKE2B 0090799201e5b3f031f1387ff6cb12db2be65712bb7ad4282c4eb70e71238c180ea38dc6bb0672cee033695d2054a4e8cd8cce7ed2e31229ec8b3741227bbb98 SHA512 49021d9db0cf4917d267c5390fc47f2cbc73b0301720e83ef774c29d46417c1b6d5aa6e71f3f3f4e3299faf08d80dbd4de907dfa0f597bb263a6c57c0bec077f
-DIST epson-inkjet-printer-escpr2-1.1.31-1lsb3.2.x86_64.rpm 2767725 BLAKE2B 4e94e5f600690d36ac7929b6602b14b371050828cffedadb49487d0e04e3fbb6cd9814cd5330efbb1fece89061917c347518c13733c6e0fd064045cc5271a81f SHA512 73a8d6d24a6ffc1d8795f4dc1ee8c4c592433b93731bc14b070cf5f75dd95c23d2cf2e66ba4c01c6a2b69cc2848ac4e825d2580245ece7f3fc0847c9c6307ff9
 DIST epson-inkjet-printer-escpr2-1.1.32-1lsb3.2.i486.rpm 2766335 BLAKE2B 229bdafac4b29ac4911c213522c0a182a0c15822a33507063aeba8d30cb2a81ec20a893c9a9300f52f5ad844e618bd2b65b35d28a9072829b709e2c3eec33cf0 SHA512 a4579a850f0a3e392b6f65d87b53ed39af0a66de1efc2b3fc9e9b0290d6d6e4c8af52fbcc0eeb4d32f62a8f1b1bf91fd1b815b471bd5d2b88ff41f0799ab46f6
 DIST epson-inkjet-printer-escpr2-1.1.32-1lsb3.2.x86_64.rpm 2765754 BLAKE2B 8cafde3233d752fcf088824fe4daa78d3fb9d86569556a702dfcd0dc985f012566dfe1f42f960483614bd7e079e5f0f0bfb7d5a2a74be7855518ebb923121515 SHA512 a09de75ede3e0aed298828fd126c290b98a0e279af681c0d0d87e043a8ad2a0c12f097e1d85a5ef617b994ef2b45794dbf06b810465243de456d1af65f2f7278
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.31.ebuild 1670 BLAKE2B 4d9a058961500fcb8f05913661a109ec1cb107bf04c0fdedce88d321779c1d9415aa02fce4eb528b5ff8f5c06aa2148ddc90bfef9030e04a2ecf12f594412144 SHA512 139bec7304d5aea9effcb2371d6ee7d46df95777f5b36231ae5bb4ef2614eacbc37425fd4b7b2bf17767bc5b34618001d39bce9685a9a0bd2417b3359864976f
+DIST epson-inkjet-printer-escpr2-1.1.33-1lsb3.2.i486.rpm 2788356 BLAKE2B 2d3a79faf1f072658ce2a7cc8c9ffba0d2833aa27e86c8f4977651ebddc588c24f33f82f0ac72b9c10fd6d67387ed77373531bc44d95c751702554a17274d41b SHA512 9d6a27db74ff6630a518dd6bba88ac84ecd63592dedfa6f61a17888cad5718fdfebc637ce8b2081af3a10cef314a56f1a0fce64ce4f56a66dc52ff4d1c4f99c0
+DIST epson-inkjet-printer-escpr2-1.1.33-1lsb3.2.x86_64.rpm 2787800 BLAKE2B 98731bf1a6026c307dad4ae6855523a448094a8ee88a07d223380b7b24bf3992dd8d31499712bd9105b00aede5d3732b2dea1a0e8b41abb1b0b2e6485c5cb954 SHA512 96b49725da06c2b2b8cb25e202c76e408c1210efcc7a37cf4df99341cf3dfecba12f1c21f62ddcf10ec6e9c5198ef6e0e38b3d43b22e54a0757c9794ee48dc2e
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.32.ebuild 1670 BLAKE2B 5702d6cb02abc6140cb748f1c492aedcab333b45eaa9a3ec490a51c3d8ffec129c8ef1e1dddfd2f2b13d48269fd97ab0d828ecb603830ded3fd0f38d2204f24c SHA512 5651585aa73fb65ac7471f75b0eaab4f58faa3470fe0a4b9171d9271f1146d70f65907f3b8d8ab5f8efdbdf436bc6931dab69f55cd373d73a0f3785a5d41f253
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.33.ebuild 1670 BLAKE2B c4001ef9cad657566e98dfc0bb4ad74c1dc2369f3eff2d602617d711418b1d89b04d93cfec3523d322e94f2d15101b519f3342acbf444d3310d1b53f666c8a11 SHA512 c2c00c03c08001c68d2c8d0dc4ecf808e362c16808fae23c40490d1afc0ee20979916b2f6f265850f882020884c2c8a434af85d752dbf18e96338df9d5e6b10f
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
