@@ -5,8 +5,8 @@ EAPI=6
 
 inherit rpm
 
-DSC_x86="f/03/00/12/69/33/3520edc0cd7f451ac0baa7efbbfc39cec37ce18e"
-DSC_amd64="f/03/00/12/69/33/f3f38fee7c5117dcd7ca202176990d96828a443d"
+DSC_x86="f/03/00/12/70/17/20c6da0381ea4966200302d61fc42b0acaea4040"
+DSC_amd64="f/03/00/12/70/17/379e828e9552ca4dc49c7cfcc3c665bd4da1336c"
 
 DESCRIPTION="Epson ESC/P-R 2 generic Inkjet Printer Driver binary package"
 HOMEPAGE="https://download.ebz.epson.net/dsc/search/01/search/?OSC=LX"
