@@ -1,6 +1,6 @@
 AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.31.tar.gz 4008828 BLAKE2B b81c72952bd01b0c6eb1ecad1f4c54391c632edbc5d8dc1fbdb7ddda92b0d586b94725873af076d6ad84bc4cbac0682aa47f2c8833bd4a8918dd9f610ce6a0ec SHA512 0a268bb65c58a94a9f7e46611e4c1925ca42a532d95f01dcbb849de9ab683cd9915200173d1082baf8f82c9487d34b0d56c93a373ecd6e8071672aa9e42b53fc
 DIST epson-inkjet-printer-escpr2-1.1.32.tar.gz 4025795 BLAKE2B 0f39db6e08b44d8388601f2c0035a32661e15382149ea762ded733bf96cea9b9409a0796c0c6528c8324563baf6f38db4d65dbf73b9a89ca478cdd670949e8c3 SHA512 2fed7a5a74bbeda9f19eb2f326549d2a9facafa6b46727809a5f4a01031f94d6b8ccf4d29a55cb536a78d4c857282ed910c8890437426ef7cc3f1e80b78a7b7a
-EBUILD epson-inkjet-printer-escpr2-1.1.31.ebuild 1319 BLAKE2B 2206bd4fb5844feccc7e3c2667125c5f88ba156dc90d74f043db058f47ba51954172a2009f6d13d3cbfa03c8b750ca0d1ce3d0cf09bd72c588dbac71031e0f48 SHA512 75688cb5a289b3625aede423ee613951eeefe5be683e306be59a832e24a93b02a2316947fdcf9e91f63befe3e543cd7fde837d0ee2a101eb31a59bcef75da977
+DIST epson-inkjet-printer-escpr2-1.1.33.tar.gz 4050097 BLAKE2B 989ba57516d78e5fe1861d9e455e9ff28061e92f7944ae22cbf9f1c5de92aecc849910568e6f4c67f3a4916b2fe3c3a1f3d23feea3de8d9a22399805c00b66ae SHA512 fa14fbf4650a9dcfb89beae5511f2b66e0c87847834c283720e03e4961de7fb2e6d9d8159cacb8cc428dbeddc9e90a97aaedc3f68306978227500d2e24a5da08
 EBUILD epson-inkjet-printer-escpr2-1.1.32.ebuild 1319 BLAKE2B 839c5e46082fa15989cf905062a94d7d984daf143808365d75413ab472b6486fa74be88f5a180f71ed8daa7a67f82705bb6ad3d77b093c49262871c16743db39 SHA512 124da5195424914a3bbb2f7ef7cd25ca01932e84ce3463d326eafb515cbb11f0c8a690e4622cb8f632922641b0928e1b2c013a0f8bd9b3238e606d8d30fdd63f
+EBUILD epson-inkjet-printer-escpr2-1.1.33.ebuild 1319 BLAKE2B c5ed572c7c69e059f20b2fc552095d04a5ae4b170b6418620857b1df61fc3645656a0135d4c393b4a9129696ec8b2b27721e0e796ee104e6d5b24312f02eaf65 SHA512 1fd197682ca028a5392f198e835190ac5b6e12056076b16e2844897dd9df94ea48887a50ac8e72758ebf6c993be820ff104848081eef380458a9403ff319db0e
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
